# diffreview

./: .gitignore  README.md  WORKSPACE  package.json  tsconfig.json  webpack.config.js
src/: BUILD.bazel  main.html  main.ts  main.tsx  routing.ts
src/api/: models.ts
src/api/github/: diff.ts  file.ts  loader.ts
src/api/github/graphql/: common.ts  content.ts  pullrequest.ts  repositoryroottree.ts  user.ts
src/components/app/: App.css  App.module.css  App.tsx  BUILD.bazel
src/components/editor/: BUILD.bazel  Editor.module.css  Editor.module.css.d.ts  Editor.tsx
src/components/tree/: Tree.module.css  Tree.module.css.d.ts  Tree.tsx
src/store/: actions.ts  epics.ts  reducer.ts  selectors.ts  state.ts
src/styling/: classes.ts
